remove warnings around deprecated use of java reflection