@@ -2,6 +2,7 @@ package Params;
 
 import java.awt.Component;
 import java.awt.FontMetrics;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 
 import javax.swing.JLabel;
@@ -19,12 +20,20 @@ public abstract class ParameterEditor
 	public ParameterEditor newInstance()
 	{
 		try {
-			return ((ParameterEditor) getClass().forName(this.getClass().getName()).newInstance());
+			return ((ParameterEditor) Class.forName(this.getClass().getName()).getDeclaredConstructor().newInstance());
 		} catch (InstantiationException e) {
 			e.printStackTrace();
 		} catch (IllegalAccessException e) {
 			e.printStackTrace();
 		} catch (ClassNotFoundException e) {
+			e.printStackTrace();
+		} catch (IllegalArgumentException e) {
+			e.printStackTrace();
+		} catch (InvocationTargetException e) {
+			e.printStackTrace();
+		} catch (NoSuchMethodException e) {
+			e.printStackTrace();
+		} catch (SecurityException e) {
 			e.printStackTrace();
 		}
 		return null;
